--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -1,16 +1,24 @@
 global:
-    scrape_interval: 15s
-    evaluation_interval: 15s
+    scrape_interval: 30s
+    evaluation_interval: 30s
 
 scrape_configs:
     - job_name: 'prometheus'
       static_configs:
           - targets: ['host.docker.internal:9090']
-    - job_name: 'userService'
+    - job_name: 'User Service'
       metrics_path: 'userService/actuator/prometheus'
       static_configs:
-        - targets: ['10.0.2.2:8083']
-    - job_name: 'userNotes'
+        - targets: ['user-service:8083']
+    - job_name: 'User Notes'
       metrics_path: 'userNotes/actuator/prometheus'
       static_configs:
-        - targets: ['10.0.2.2:8084']
+        - targets: ['user-notes-service:8084']
+    - job_name: 'Service Discovery'
+      metrics_path: 'actuator/prometheus'
+      static_configs:
+        - targets: [ 'service-registry-server:8761']
+    - job_name: 'API Gateway'
+      metrics_path: 'actuator/prometheus'
+      static_configs:
+        - targets: [ 'api-gateway-server:8081' ]
