--- a/microservice-api-gateway/src/main/resources/application.yml
+++ b/microservice-api-gateway/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 logging:
   level:
-    org.springframework: TRACE
-    org.springframework.web.reactive.function.client: TRACE
+    org.springframework: INFO
+    org.springframework.web.reactive.function.client: INFO
 
 spring:
   application:
     name: gateway-service
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
   cloud:
     config:
       fail-fast: true #the service will not run if it can't reach the config-service
