--- a/microservice-registry-service/src/main/resources/application.yml
+++ b/microservice-registry-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: registry-service #name of the application
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
   cloud:
     config:
       fail-fast: true #the service will not run if it can't reach the config-service
