--- a/microservice-usernotes-service/pom.xml
+++ b/microservice-usernotes-service/pom.xml
@@ -69,6 +69,7 @@
 		<dependency>
 			<groupId>io.zipkin.reporter2</groupId>
 			<artifactId>zipkin-reporter-brave</artifactId>
+			<version>2.16.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.loki4j</groupId>
