--- a/microservice-usernotes-service/src/main/resources/application.yml
+++ b/microservice-usernotes-service/src/main/resources/application.yml
@@ -2,21 +2,14 @@ logging:
   pattern:
     level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
   level:
-    org.springframework: DEBUG
+    org.springframework: INFO
 spring:
   application:
     name: usernotes-service
   config:
-    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888
   cloud:
     config:
       fail-fast: true #the service will not run if it can't reach the config-service
       password: 1234 #password of the config-service
       username: user #username of the config-service
-eureka:
-  client:
-    enabled: true
-    serviceUrl:
-      defaultZone: http://localhost:8761
-  instance:
-    hostname: localhost
